Construction de l'application pour publication

--- a/src/app/main-accueil/main-accueil.component.html
+++ b/src/app/main-accueil/main-accueil.component.html
@@ -9,13 +9,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="src/assets/Images_main/image_carousel_1.jpg" alt="First slide">
+          <img class="d-block w-100" src="assets/Images_main/image_carousel_1.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="src/assets/Images_main/image_carousel_2.jpg" alt="Second slide">
+          <img class="d-block w-100" src="assets/Images_main/image_carousel_2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="src/assets/Images_main/image_carousel_3.jpg" alt="Third slide">
+          <img class="d-block w-100" src="assets/Images_main/image_carousel_3.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -152,7 +152,7 @@
          <div class ="row m-0">
      <div class="card-deck m-0">
        <div class="card m-1">
-         <img class="card-jupiter card-imge" src="src/assets/Images_main/jupiter.jpg" alt="card-jupiter">
+         <img class="card-jupiter card-imge" src="assets/Images_main/jupiter.jpg" alt="card-jupiter">
          <div class="card-body">
            <h5 class="card-title">Jupiter/Xalia</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
@@ -168,7 +168,7 @@
        </div>
 
        <div class="card m-1">
-         <img class="card-mercure card-imge" src="src/assets/Images_main/mercure.jpg" alt="card-mercure">
+         <img class="card-mercure card-imge" src="assets/Images_main/mercure.jpg" alt="card-mercure">
          <div class="card-body">
            <h5 class="card-title">Mercury/Kalahihi</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
@@ -184,7 +184,7 @@
          </div>
        </div>
        <div class="card m-1">
-         <img class="card-lune card-imge" src="src/assets/Images_main/lune.jpeg" alt="card-lune">
+         <img class="card-lune card-imge" src="assets/Images_main/lune.jpeg" alt="card-lune">
          <div class="card-body">
            <h5 class="card-title">Moon/Tycho</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
@@ -207,7 +207,7 @@
      <div class ="row m-0 p-0">
      <div class="card-deck m-0">
        <div class="card m-1">
-         <img class="card-pluton card-imge" src="src/assets/Images_main/pluton.jpg" alt="card-pluton">
+         <img class="card-pluton card-imge" src="assets/Images_main/pluton.jpg" alt="card-pluton">
          <div class="card-body">
            <h5 class="card-title">Pluto/Jaron</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
@@ -223,7 +223,7 @@
          </div>
        </div>
        <div class="card m-1">
-         <img class="card-neptune card-imge" src="src/assets/Images_main/neptune.jpg" alt="card-neptune">
+         <img class="card-neptune card-imge" src="assets/Images_main/neptune.jpg" alt="card-neptune">
          <div class="card-body">
            <h5 class="card-title">Neptun/Bezaï</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
@@ -239,7 +239,7 @@
          </div>
        </div>
        <div class="card m-1">
-         <img class="card-venus card-imge" src="src/assets/Images_main/venus.jpg" alt="card-venus">
+         <img class="card-venus card-imge" src="assets/Images_main/venus.jpg" alt="card-venus">
          <div class="card-body">
            <h5 class="card-title">Venus/Nadahira</h5>
            <p class="card-text">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
